# Stackfuel-DPP

./: .gitignore  README.md  pyproject.toml
docs/: project.md
notebooks/: 01_exploration.ipynb  Balkonkraftwerk neuy.ipynb  Balkonkraftwerk.ipynb
src/core/: data.py
